2004-12-23  Thien-Thi Nguyen  <ttn@gnu.org>

	* progmodes/hideshow.el (hs-inside-comment-p): Fix omission bug:
	When extending backwards, move outside the current comment first.

2004-12-22  Kenichi Handa  <handa@m17n.org>

	* international/quail.el (quail-start-translation): Fix prompt
	string for the case if input-method-use-echo-area being non-nil.
	(quail-start-conversion): Likewise.
	(quail-show-guidance): Don't show guidance if
	input-method-use-echo-area is non-nil.

2004-12-21  Richard M. Stallman  <rms@gnu.org>

	* textmodes/ispell.el (ispell-help): Bind resize-mini-windows.

2004-12-21  Markus Rost  <rost@ias.edu>

	* calendar/diary-lib.el (mark-diary-entries): Set
	mark-diary-entries-in-calendar only after checking for diary-file.

2004-12-21  Richard M. Stallman  <rms@gnu.org>

	* faces.el (escape-glyph): Use blue against light foreground.

	* simple.el (undo-outer-limit-truncate): New function.
	(undo-outer-limit-function): Use undo-outer-limit-truncate.

2004-12-21  Eli Barzilay  <eli@barzilay.org>

	* calculator.el: (calculator-radix-grouping-mode)
	(calculator-radix-grouping-digits)
	(calculator-radix-grouping-separator):
	New defcustoms for the new radix grouping mode functionality.
	(calculator-mode-hook): Now used in electric mode too.
	(calculator-mode-map): Some new keys.
	(calculator-message): New function.  Some new calls.
	(calculator-string-to-number): New function,
	(calculator-curnum-value): Use it.
	(calculator-rotate-displayer, calculator-rotate-displayer-back)
	(calculator-displayer-prev, calculator-displayer-next):
	Change digit group size when in radix mode.
	(calculator-number-to-string): Renamed from calculator-num-to-string.
	Now deals with digit grouping in radix mode.

2004-12-20  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/calendar.el (view-other-diary-entries): Add autoload.
	* calendar/diary-lib.el (view-other-diary-entries): Use
	current-prefix-arg in interactive spec.

2004-12-19  Jay Belanger  <belanger@truman.edu>
